[project]
name = "power-nudge"
version = "0.1.0"
description = ""
authors = [
    {name = "Lav Sharma",email = "lavsharma2016@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dynaconf (>=3.2.10,<4.0.0)",
    "twilio-helper (>=0.1.0,<0.2.0)"
]

[tool.poetry]
packages = [{include = "power_nudge", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
